<resources>
    <string name="app_name">HospitalS9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Editar">Editar</string>
    <string name="menu_Eliminar">Eliminar</string>
    <string name="menu_Create">Create</string>
    <string name="menu_Listar">Listar</string>
    <string name="menu_AcercaDe">AcercaDe</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="fechaIngreso">Fecha de ingreso</string>
    <string name="edad">Edad</string>
    <string name="peso">Peso</string>
    <string name="estatura">Estatura</string>
    <string name="genero">Genero</string>
    <string name="area">Area</string>
    <string name="doctor">DR</string>
    <string name="Limpiar">Limpiar</string>
    <string name="guardar">Guardar</string>
    <string name="buscar">Buscar</string>

    <string name="universidad">Unidad Academica Profesional Tianguistenco</string>
    <string name="especialidad">Ingenieria En Software</string>
    <string name="profe">Profa Rocio Elizabeth Pulido</string>
    <string name="alumno">Nombre del alumno</string>
    <string name="clase">computo Movil</string>
    <string name="verrsion">Version 1.0.0 2022</string>
    <string name="infopaciente">infoPaciente</string>


</resources>