<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Editar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Editar" />
        <item
            android:id="@+id/nav_Eliminar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Eliminar" />
        <item
            android:id="@+id/nav_Create"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Create" />
        <item
            android:id="@+id/nav_Listar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Listar" />


    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_AcercaDe"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_AcercaDe" />
    </group>
</menu>